edit DefaultCurrencyConverter, fix tests